form uploads to database

--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,21 @@
 </head>
 <body>
 	
-<h1>Hello</h1>
+<h1>upload to MYSQL</h1>
 
-<form action="/upload" method="POST">
+<form action="/uploadMySQL" method="POST">
+
+<input type="text" name="username">
+<input type="text" name="password">
+	
+
+<input type="submit">
+
+</form>
+
+<h1>upload to MongoDB</h1>
+
+<form action="/uploadMongoDB" method="POST">
 
 <input type="text" name="username">
 <input type="text" name="password">
